--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <article class="mp3-player-container">
-      <section class="art-box">
+      <section id="art-box">
         <div class="playlist-icon">Playlist</div>
         <div class="music-bars">
           <p id="currentTime" class="current-time"></p>
@@ -31,20 +31,25 @@
             </svg>
           </button>
           <button id="play" type="button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-              class="lucide lucide-play">
+            <svg id="playBtn" class="visible" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+              viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" class="lucide lucide-play">
               <polygon points="5 3 19 12 5 21 5 3" />
             </svg>
-          </button>
-          <button id="next" type="button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-              class="lucide lucide-skip-forward">
-              <polygon points="5 4 15 12 5 20 5 4" />
-              <line x1="19" x2="19" y1="5" y2="19" />
+            <svg id="pauseBtn" class="hidden" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+              viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" class="lucide lucide-pause">
+              <rect width="4" height="16" x="6" y="4" />
+              <rect width="4" height="16" x="14" y="4" />
             </svg>
-          </button>
+            <button id="next" type="button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="lucide lucide-skip-forward">
+                <polygon points="5 4 15 12 5 20 5 4" />
+                <line x1="19" x2="19" y1="5" y2="19" />
+              </svg>
+            </button>
         </div>
       </section>
       <section class="status-box">
